--- a/src/styles/scss/_buttons.scss
+++ b/src/styles/scss/_buttons.scss
@@ -79,22 +79,23 @@ button {
     }
   }
 
-  @include mixins.xl {
+  @media (max-width: 1200px), (max-height: 600px) {
     padding: 12px 16px;
+    font: var(--body-sm);
   }
 
   &.sm {
     font: var(--body-sm);
     padding: 12px 24px;
 
-    @include mixins.xl {
+    @media (max-width: 1200px), (max-height: 600px) {
       padding: 12px 16px;
     }
   }
 
   &.lg {
     padding: 16px 32px;
-    @include mixins.xl {
+    @media (max-width: 1200px), (max-height: 600px) {
       padding: 16px 24px;
     }
   }
